Fix javascript sorting due to moved state column Add variance to band_view

--- a/client/views/vote/admin/band_view.html
+++ b/client/views/vote/admin/band_view.html
@@ -57,7 +57,7 @@
                 <div class="col-xs-12">
                     <h1>Band "{{ band.name }}"
                         <small>{{ band.vote_count }} Stimme{% if band.vote_count != 1 %}n{% endif %},
-                            &#8960; {{ band.vote_average }}</small>
+                            &#8960; {{ band.vote_average }}, Varianz {{ band.vote_variance }}</small>
                     </h1>
                 </div>
             </div>
