remove unnecessary closing script tag

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -27,7 +27,7 @@
     {{view "star" band=view.band vote=5}}
 </script>
 
-</script><script type="text/x-handlebars" id="main">
+<script type="text/x-handlebars" id="main">
     <div class="main-area">
 
         <div class="sidebar-area player">
