Show messages on admin_area

--- a/client/views/vote/admin/overview.html
+++ b/client/views/vote/admin/overview.html
@@ -2,8 +2,9 @@
 {% from "_formhelpers.html" import renderMessages %}
 
 {% block body %}
-
-    <br/><br/><br />
+    <br/><br/>
+    {{ renderMessages() }}
+    <br />
 
     <section class="main-content profile">
         <div class="container">
