--- a/client/src/scss/page/_band-detail.scss
+++ b/client/src/scss/page/_band-detail.scss
@@ -59,6 +59,8 @@
 }
 
 .band-detail {
+  overflow: hidden;
+
   img {
     max-width: 100%;
   }
@@ -69,6 +71,7 @@
 
   h3 {
     width: 100%;
+    margin-bottom: 1rem;
   }
 }
 
@@ -80,7 +83,7 @@
   position: relative;
 
   @include breakpoint(m) {
-    padding-top: 100px;
+    padding-top: 80px;
   }
 
   &:before {
@@ -116,13 +119,7 @@
   text-align: center;
   font-size: 36px;
 
-  @include breakpoint(sm) {
-    margin: 25px 0 15px;
-  }
-
-  @include breakpoint(m) {
-    margin: 2.5rem 0 1rem;
-  }
+  margin-bottom: 0.5rem;
 }
 
 .voting {
@@ -262,10 +259,10 @@ form.comment {
 .band-description {
   text-align: justify;
   line-height: 1.3em;
-  padding: 25px 25px;
+  padding: 15px 15px;
   margin: 10px 0px 40px;
-  border-radius: 5px;
-  border: 2px solid #D3D3D3;
+  border-radius: 4px;
+  border: 1px solid #D3D3D3;
   background-color: #FCFCFC;
   -moz-box-shadow: 5px 3px 3px #D3D3D3;
   -webkit-box-shadow: 5px 3px 3px #D3D3D3;
