Set content height to 100% insted of 100% + 10px (at least on fx)

--- a/client/src/scss/app-vote.scss
+++ b/client/src/scss/app-vote.scss
@@ -15,7 +15,7 @@
 @import "base/lists";
 @import "base/tabs";
 
-@import "base/header";
+@import "base/header_vote";
 @import "base/footer";
 
 @import "components/logo";
