Use correct header.scss (analogous to #2b961f14484)

--- a/client/src/scss/app-vote-admin.scss
+++ b/client/src/scss/app-vote-admin.scss
@@ -10,7 +10,7 @@
 @import "base/grid-vote";
 @import "base/icons";
 
-@import "base/header";
+@import "base/header_vote";
 @import "base/footer";
 
 @import "page/messages";
