Add link for voting, fix missing typo in acp, make header a bit nicer

--- a/client/src/scss/app-vote-admin.scss
+++ b/client/src/scss/app-vote-admin.scss
@@ -6,6 +6,8 @@
 
 //@import "base/debug";
 
+@import "base/typography";
+
 @import "base/normalize";
 @import "base/grid-vote";
 @import "base/icons";
