Set access name in front of user nick

--- a/client/views/vote_layout/header.html
+++ b/client/views/vote_layout/header.html
@@ -7,9 +7,9 @@
 
         {% if g.user %}
             <div class="account">
-                <span>{{ g.user.login }}</span>
+                <span>{{ g.user.access_name }} {{ g.user.login }}</span>
                 {% if g.user.is_mod or g.user.is_admin %}
-                    <span><a href="{{ url_for('vote.bands.app', _anchor='/bands') }}">Voting</a>&nbsp;</span>
+                    <span>&nbsp; <a href="{{ url_for('vote.bands.app', _anchor='/bands') }}">Voting</a>&nbsp;</span>
                     <span><a href="{{ url_for('vote.admin.index') }}">Administration</a>&nbsp;</span>
                 {% endif %}
 
