--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -65,6 +65,7 @@
 
 
             <br />
+            <a href="#" {{ action "showRandomUnvotedBand" }}>Show a random unvoted band</a><br />
             <a href="#" {{ action "addUnvotedTracks" }}>Add all unvoted bands to queue</a>
 
             <div class="queue">
