--- a/client/views/vote/admin/user_list.html
+++ b/client/views/vote/admin/user_list.html
@@ -12,6 +12,7 @@
         {% if g.user.is_admin %}
             <th class="hidden-print">Berechtigungen</th>
             <th><a id="sortVotes" href="{{ build_sort_url('vote_count', reverse) }}">Votes</a></th>
+            <th><a id="sortVotesLatest" href="{{ build_sort_url('vote_latest', reverse) }}">24h</a></th>
             <th><a id="sortVoteAverage" href="{{ build_sort_url('vote_average', reverse) }}">&#8960;</a></th>
             <th><a id="sortVoteVariance" href="{{ build_sort_url('vote_variance', reverse) }}">Varianz</a></th>
         {% endif %}
@@ -38,6 +39,7 @@
                     {% endif %}
                 </td>
                 <td>{{ user.vote_count }}</td>
+                <td>{{ user.vote_latest }}</td>
                 <td>{{ user.vote_average }}</td>
                 <td>{{ user.vote_variance }}</td>
             {% endif %}
