--- a/client/views/vote/admin/band_list.html
+++ b/client/views/vote/admin/band_list.html
@@ -37,9 +37,10 @@
         <th><a id="sortDistance" href="{{ build_sort_url('distance') }}">Entf.</a></th>
         <th colspan="2">
             <a id="sortCount" href="{{ build_sort_url('vote_count') }}">Voting</a>,
-            <a id="sortAverage" href="{{ build_sort_url('vote_average') }}">&#8960</a>
+            <a id="sortAverage" href="{{ build_sort_url('vote_average') }}">&#8960;</a>
             </th>
         <th><a id="sortVariance" href="{{ build_sort_url('vote_average') }}">Var{% if state == 0%}.{% else %}ianz{% endif %}</a></th>
+        <th title="Durschnittsbewertung plus Standardabweichung (Wurzel der Varianz)"><a id="sortDeviation" href="{{ build_sort_url('vote_with_deviation') }}">&#8960; + Dev.</a></th>
         {% if state == 0 %} <th><a id="sortState" href="{{ build_sort_url('state') }}">Status</a></th> {% endif %}
         <th class="hidden-print">Optionen</th>
     </tr>
@@ -60,6 +61,7 @@
                 <td>{{ band.vote_count }}</td>
                 <td>&#8960; {{ band.vote_average }}</td>
                 <td>{{ band.vote_variance }}</td>
+                <td>{{ band.vote_with_deviation }}</td>
                 {% if state == 0 %} <td>{{ band.state_label }}</td> {% endif %}
                 <td class="hidden-print">
                     <div class="dropdown">
