Use another chart.js file

--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block inlinejs %}
-    <script src="{{ url_for('static', filename='js/vendor/voters/05-Chart.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vendor/07-chart.min.js') }}"></script>
 
     <script type="text/javascript">
         // Get context with jQuery - using jQuery's .get() method.
