--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -12,6 +12,16 @@
         <div class="col-xs-12">
             <h2>Statistiken</h2>
 
+            <ul>
+                <li>{{ dict['user_count'] }} Benutzer</li>
+                <li>{{ dict['user_voted'] }} haben gevotet</li>
+                <li>{{ dict['user_voted_2digit'] }} Benutzer haben mindestens 10 Bands bewertet</li>
+                <li>{{ dict['user_voted_all'] }} Benutzer haben alle Bands bewertet</li>
+                <li>{{ dict['vote_count'] }} Votes</li>
+                <li>{{ dict['vote_average'] }} durchschnittliche Votes pro votendem Benutzer</li>
+                <li>{{ dict['vote_average2'] }} durchschnittliche Votes pro mindestens 10 Bands votendem Benutzer</li>
+            </ul>
+
             <h3>Votes</h3>
             <canvas id="myChart" width="400" height="400"></canvas>
 
