class is not style

--- a/client/views/vote/users_overview.html
+++ b/client/views/vote/users_overview.html
@@ -16,7 +16,7 @@
             <ul>
                 <li>{{ user.anonymous_login() }}
                     <div>
-                        <div class="width: {{ user.vote_count }}%"></div>
+                        <div style="width: {{ user.vote_count }}%"></div>
                     </div>
                 </li>
             </ul>
