--- a/client/views/vote/users_overview.html
+++ b/client/views/vote/users_overview.html
@@ -14,7 +14,7 @@
 
             {% for user in users %}
             <ul>
-                <li>{{ user.anonymous_login() }} ({% if user.vote_count > 3 %}155{% else %}{{ user.vote_count }}{% endif %} Votes)
+                <li>{{ user.anonymous_login() }} ({% if user.vote_count >= 155 %}155{% else %}{{ user.vote_count }}{% endif %} Votes)
                     <div>
                         <div style="width: {% if user.vote_count > 3 %}155{% else %}{{ user.vote_count }}{% endif %}px"></div>
                     </div>
