some small layout issues

--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -14,12 +14,13 @@
 
             <ul>
                 <li>{{ dict['user_count'] }} Benutzer</li>
-                <li>{{ dict['user_voted'] }} haben gevotet</li>
+                <li>{{ dict['user_voted'] }} Benutzer haben gevotet</li>
                 <li>{{ dict['user_voted_2digit'] }} Benutzer haben mindestens 10 Bands bewertet</li>
                 <li>{{ dict['user_voted_all'] }} Benutzer haben alle Bands bewertet</li>
+                <li></li>
                 <li>{{ dict['vote_count'] }} Votes</li>
-                <li>{{ dict['vote_average'] }} durchschnittliche Votes pro votendem Benutzer</li>
-                <li>{{ dict['vote_average2'] }} durchschnittliche Votes pro mindestens 10 Bands votendem Benutzer</li>
+                <li>durchschnittlich {{ dict['vote_average'] }} Votes pro votendem Benutzer</li>
+                <li>durchschnittlich {{ dict['vote_average2'] }} Votes pro Benutzer, der mindestens 10 Bands bewertet hat</li>
             </ul>
 
             <h3>Votes</h3>
