--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -17,10 +17,16 @@
                 <li>{{ dict['user_voted'] }} Benutzer haben gevotet</li>
                 <li>{{ dict['user_voted_2digit'] }} Benutzer haben mindestens 10 Bands bewertet</li>
                 <li>{{ dict['user_voted_all'] }} Benutzer haben alle Bands bewertet</li>
-                <li></li>
+                <li>&nbsp;</li>
                 <li>{{ dict['vote_count'] }} Votes</li>
                 <li>durchschnittlich {{ dict['vote_average'] }} Votes pro votendem Benutzer</li>
                 <li>durchschnittlich {{ dict['vote_average2'] }} Votes pro Benutzer, der mindestens 10 Bands bewertet hat</li>
+                <li>&nbsp;</li>
+                <li>durschnittliche Bandbewertung {{ dict['votes_avg'] }}</li>
+                <li>mindestens {{ dict['votes_min'] }} Bewertungen pro Band</li>
+                <li>maximal {{ dict['votes_max'] }} Bewertungen pro Band</li>
+                <li>{{ dict['votes_avg_min'] }} schlechtestes Durchschnittsvoting einer Band</li>
+                <li>{{ dict['votes_avg_max'] }} bestes Durschnittsvoting einer Band</li>
             </ul>
 
             <h3>Votes</h3>
