--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -22,11 +22,11 @@
                 <li>durchschnittlich {{ dict['vote_average'] }} Votes pro votendem Benutzer</li>
                 <li>durchschnittlich {{ dict['vote_average2'] }} Votes pro Benutzer, der mindestens 10 Bands bewertet hat</li>
                 <li>&nbsp;</li>
-                <li>durschnittliche Bandbewertung {{ dict['votes_avg'] }}</li>
+                <li>durchschnittliche Bandbewertung {{ dict['votes_avg'] }}</li>
                 <li>mindestens {{ dict['votes_min'] }} Bewertungen pro Band</li>
                 <li>maximal {{ dict['votes_max'] }} Bewertungen pro Band</li>
                 <li>{{ dict['votes_avg_min'] }} schlechtestes Durchschnittsvoting einer Band</li>
-                <li>{{ dict['votes_avg_max'] }} bestes Durschnittsvoting einer Band</li>
+                <li>{{ dict['votes_avg_max'] }} bestes Durchschnittsvoting einer Band</li>
             </ul>
 
             <h3>Votes</h3>
