Make the headings a bit nicer

--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -29,10 +29,10 @@
                 <li>{{ dict['votes_avg_max'] }} bestes Durchschnittsvoting einer Band</li>
             </ul>
 
-            <h3>Votes</h3>
-            <canvas id="myChart" width="400" height="400"></canvas>
+            <h3>Votingaktivität</h3>
+            <canvas id="myChart" width="400" height="450"></canvas>
 
-            <h3>Benutzer</h3>
+            <h3>Benutzer-Votingaktivität</h3>
             <canvas id="myChartUsers" width="400" height="400"></canvas>
         </div>
     </div>
