Add counter for just 1 band-voter

--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -15,6 +15,7 @@
             <ul>
                 <li>{{ dict['user_count'] }} Benutzer</li>
                 <li>{{ dict['user_voted'] }} Benutzer haben gevotet</li>
+                <li>{{ dict['user_voted_1'] }} Benutzer haben nur 1 Band bewertet</li>
                 <li>{{ dict['user_voted_2digit'] }} Benutzer haben mindestens 10 Bands bewertet</li>
                 <li>{{ dict['user_voted_all'] }} Benutzer haben alle Bands bewertet</li>
                 <li>&nbsp;</li>
