--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -22,6 +22,7 @@
                 <li>{{ dict['vote_count'] }} Votes</li>
                 <li>durchschnittlich {{ dict['vote_average'] }} Votes pro votendem Benutzer</li>
                 <li>durchschnittlich {{ dict['vote_average2'] }} Votes pro Benutzer, der mindestens 10 Bands bewertet hat</li>
+                <li>durchschnittlich {{ dict['votes_per_day'] }} Votes pro Tag</li>
                 <li>&nbsp;</li>
                 <li>durchschnittliche Bandbewertung {{ dict['votes_avg'] }}</li>
                 <li>mindestens {{ dict['votes_min'] }} Bewertungen pro Band</li>
