--- a/client/views/vote/statistics.html
+++ b/client/views/vote/statistics.html
@@ -29,6 +29,8 @@
                 <li>maximal {{ dict['votes_max'] }} Bewertungen pro Band</li>
                 <li>{{ dict['votes_avg_min'] }} schlechtestes Durchschnittsvoting einer Band</li>
                 <li>{{ dict['votes_avg_max'] }} bestes Durchschnittsvoting einer Band</li>
+                <li>&nbsp;</li>
+                <li>{{ dict['comments_count'] }} Kommentare verfasst von {{ dict['comments_users'] }} Benutzern</li>
             </ul>
 
             <h3>Votingaktivität</h3>
