Implement public vote results inkl. States

--- a/client/views/vote_layout/header.html
+++ b/client/views/vote_layout/header.html
@@ -8,6 +8,7 @@
         {% if g.user %}
             <div class="account">
                 <span>{{ g.user.access_name }} {{ g.user.login }}</span>
+                <span>&nbsp; <a href="{{ url_for('vote.home.vote_results') }}">Ergebnisse</a></span>
                 {% if g.user.is_mod or g.user.is_admin %}
                     <span>&nbsp; <a href="{{ url_for('vote.bands.app', _anchor='/bands') }}">Voting</a>&nbsp;</span>
                     <span><a href="{{ url_for('vote.admin.index') }}">Administration</a>&nbsp;</span>
