Send a band_decline mail

--- a/client/views/vote/admin/band_mail.html
+++ b/client/views/vote/admin/band_mail.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <br /><br />
-<h2>Band Reminder</h2>
+<h2>Bands benachrichtigen: {{ type }}</h2>
 
 <ul>
     {% for band in bands %}
